docs: update README with architectural diagram, quickstart and Cloud Run deployment guides